# vap

./: .gitignore  CONTRIBUTING.md  Introduction.md  LICENSE.txt  MavenCentral.md  QGVAPlayer.podspec  README.md  README_en.md
.github/ISSUE_TEMPLATE/: bug_report.md
Android/: README.md
Android/PlayerProj/: .gitignore  LICENSE.txt  bintrayv1.gradle  build.gradle  maven.gradle  publish-mavencentral.gradle  settings.gradle
Android/aar/: vap_2.0.6.aar
iOS/: CHANGELOG.md  README.md
ohos/: .gitignore  OAT.xml  README.OpenSource  README.md  README_jp.md  README_zh.md  build-profile.json5  oh-package-lock.json5  oh-package.json5  示例代码.ets  组件模式.ets
ohos/AppScope/: app.json5
ohos/entry/: build-profile.json5  hvigorfile.ts  obfuscation-rules.txt  oh-package-lock.json5  oh-package.json5
ohos/hvigor/: hvigor-config.json5
ohos/vap/: COMMITTERS.md  LICENSE.MIT  OAT.xml  README.OpenSource  README.md  README_zh.md  build-profile.json5  oh-package-lock.json5  oh-package.json5  示例代码.ets  组件模式.ets
ohos/vap/vap_module/src/main/cpp/include/util/json/docs/mkdocs/docs/integration/hunter/: CMakeLists.txt
ohos/vap_module/: .gitignore  BuildProfile.ets  HttpReq.ets  Index.ets  build-profile.json5  hvigorfile.ts  obfuscation-rules.txt  oh-package-lock.json5  oh-package.json5
ohos/vap_module/src/main/cpp/: CMakeLists.txt  audio_decoder.cpp  demuxer.cpp  napi_init.cpp  player.cpp  resource_request.cpp  video_decoder.cpp
ohos/vap_module/src/main/cpp/include/: audio_decoder.h  common_const.h  data_info.h  demuxer.h  player.h  plugin_manager.h  resource_request.h  vap_callback.h  video_decoder.h
ohos/vap_module/src/main/cpp/include/mask/: mask_config.h  mask_render.h  mask_shader.h
ohos/vap_module/src/main/cpp/include/mix/: frame.h  mix_render.h  mix_shader.h  src.h
ohos/vap_module/src/main/cpp/include/render/: anim_config.h  egl_core.h  plugin_render.h  yuv_render.h
ohos/vap_module/src/main/cpp/include/util/: log.h  shader_util.h  tex_coords_util.h  texture_load_util.h  vertex_util.h
ohos/vap_module/src/main/cpp/manager/: plugin_manager.cpp
ohos/vap_module/src/main/cpp/mask/: mask_config.cpp  mask_render.cpp  mask_shader.cpp
ohos/vap_module/src/main/cpp/mix/: frame.cpp  mix_render.cpp  mix_shader.cpp  src.cpp
ohos/vap_module/src/main/cpp/napi/: n_func_arg.cpp  n_func_arg.h  n_val.cpp  n_val.h
ohos/vap_module/src/main/cpp/render/: anim_config.cpp  egl_core.cpp  plugin_render.cpp  yuv_render.cpp
ohos/vap_module/src/main/cpp/types/libvap/: index.d.ts  oh-package.json5
ohos/vap_module/src/main/cpp/util/: shader_util.cpp  tex_coords_util.cpp  texture_load_util.cpp  vertex_util.cpp
tool/: JsonDesc.md  Mac_Tool.md  README.md  README_en.md  VapTool_Java.md
tool/vapxTool/: README.md
web/: .babelrc  .eslintignore  .eslintrc.js  .prettierignore  .prettierrc  README.md  package-lock.json  package.json  rollup.config.dist.js  rollup.config.js  rollup.tsconfig.json  tsconfig.json
web/demo/: README.md  index.html  package-lock.json  package.json
web/src/: gl-util.ts  index.js  index.ts  type.ts  vap-frame-parser.js  vap-frame-parser.ts  video.js  video.ts  webgl-render-vap.js  webgl-render-vap.ts
(+575 files in other folders)
